	  recent check-ins (Darcy Gong).
	* apps/netutils/webclient/webclient.c:  Fix another but that I introduced
	  when I was trying to add correct handling for loss of connection (Darcy Gong)
	* apps/nshlib/nsh_telnetd.c:  Add support for login to Telnet session via
	  username and password (Darcy Gong).
	* apps/netutils/resolv/resolv.c (and files using the DNS resolver): Various
	  DNS address resolution improvements from Darcy Gong.
	* apps/nshlib/nsh_netcmds.c:  The ping command now passes a maximum round
	  trip time to uip_icmpping().  This allows pinging of hosts on complex
	  networks where the ICMP ECHO round trip time may exceed the ping interval.
	* apps/examples/nxtext/nxtext_main.c:  Fix bad conditional compilation
	  when CONFIG_NX_KBD is not defined.  Submitted by Petteri Aimonen.
	* apps/examples/nximage/nximage_main.c:  Add a 5 second delay after the
	  NX logo is presented so that there is time for the image to be verified.
	  Suggested by Petteri Aimonen.
	* apps/Makefile: Small change that reduces the number of shell invocations
	  by one (Mike Smith).
	* apps/examples/elf:  Test example for the ELF loader.
	* apps/examples/elf:  The ELF module test example appears fully functional.
	* apps/netutils/json:  Add a snapshot of the cJSON project.  Contributed by
	  Darcy Gong.
	* apps/examples/json:  Test example for cJSON from Darcy Gong
	* apps/nshlib/nsh_netinit.c: Fix static IP DNS problem (Darcy Gong)
	* apps/netutils/resolv/resolv.c: DNS fixes from Darcy Gong.
	* COPYING: Licensing information added.
	* apps/netutils/codec and include/netutils/urldecode.h, base64.h, and md5.h:
	  A port of the BASE46, MD5 and URL CODEC library from Darcy Gong.
	* nsnlib/nsh_codeccmd.c:  NSH commands to use the CODEC library.
	  Contributed by Darcy Gong.
	* apps/examples/wgetjson: Test example contributed by Darcy Gong
	* apps/examples/cxxtest:  A test for the uClibc++ library provided by
	  Qiang Yu and the RGMP team.