@@ -1,0 +1,3 @@
+<?php
+echo json_encode($_POST);
+?>
